feat(env) add @pickmyfruit/env
This package is used to manage environment variables for the entire
monorepo.

--- a/apps/www/src/pages/index.astro
+++ b/apps/www/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import env from '@pickmyfruit/env'
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
 
