--- a/apps/www/src/components/Layout.astro
+++ b/apps/www/src/components/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import '@/styles/base.css'
 import '@/styles/colors.css'
+import '@/styles/focus.css'
 
 export interface Props {
 	title: string
